--- a/index.html
+++ b/index.html
@@ -7,72 +7,187 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title></title>
-        <meta name="description" content="">
+        <meta name="description" content="Nathan Griffiths njgriffiths portfolio">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link rel="stylesheet" href="css/normalize.min.css">
+        <!-- <link rel="stylesheet" href="css/normalize.min.css"> -->
         <link rel="stylesheet" href="css/main.css">
+        <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 
         <script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
     </head>
+
     <body>
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-
-        <div class="header-container">
-            <header class="wrapper clearfix">
-                <h1 class="title">h1.title</h1>
-                <nav>
+        <div id="portfolio">
+            <header class="clearfix">
+                <h1 class="title">Nathan Griffiths</h1>
+                <h3 class="subhead">
+                    <span>Interactive Editor at The Associated Press. NYC.</span>
+                    <nav class="contact-nav">
+                        <span class="contact">
+                            <span>Contact</span>
+                            <span class="down-arrow arrow">&#9660;</span>
+                            <!-- <span class="up-arrow arrow">&#9650;</span> -->
+                        </span>
+                        <ul>
+                            <li>
+                                <a href="mailto:njgriffiths@gmail.com" title="email: njgriffiths@gmail.com" data-article="email">
+                                    <i class="fa fa-lg fa-envelope-o"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="https://www.twitter.com/njgriffiths" title="twitter: @njgriffiths" target="_blank" data-article="twitter">
+                                    <!-- <i class="icon-twitter"></i> -->
+                                    <i class="fa fa-lg fa-twitter"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="http://competitionreport.tumblr.com" title="competitionreport.tumblr.com" target="_blank" data-article="tumblr">
+                                    <i class="fa fa-lg fa-tumblr"></i>
+                                </a>
+                            </li>
+                        </ul>
+                    </nav>
+                </h3>
+                <!-- <nav class="main-nav">
                     <ul>
-                        <li><a href="#">nav ul li a</a></li>
-                        <li><a href="#">nav ul li a</a></li>
-                        <li><a href="#">nav ul li a</a></li>
+                        <li><a href="#" data-article="about">About</a></li>
+                        <li><a href="#" data-article="Projects">Portfolio</a></li>
+                        <li><a href="#" data-article="link">Contact</a></li>
                     </ul>
-                </nav>
+                </nav> -->
+               <!--  <nav class="social-nav">
+                    <ul>
+                        <li><a href="mailto:njgriffiths@gmail.com" title="email: njgriffiths@gmail.com" data-article="email">e.</a></li>
+                        <li><a href="#" title="twitter: @njgriffiths" data-article="twitter">t.</a></li>
+                        <li><a href="#" title="competitionreport.tumblr.com" data-article="tumblr">w.</a></li>
+                    </ul>
+                </nav> -->
             </header>
+
+            <article id="projects">
+                <section class="project">
+                    <div class="header">
+                        <h2>
+                            <span>Road to Paektu</span>
+                            <!-- <span class="social">
+                                    <a href="" target="_blank">t.</a>
+                                    <a href="" target="_blank">f.</a>
+                            </span> -->
+                        </h2>
+                    </div>
+                    <a href="http://hosted.ap.org/interactives/2014/road-to-paektu" target="_blank">
+                        <!-- <div class="background-image" data-src="images/paektu.jpg"></div> -->
+                        <img class="grayscale" src="images/placeholder.png" data-src="images/paektu.jpg" data-retina="" data-websrc="images/paektu-web.jpg" alt="image" />
+                    </a>
+                    <p class="description">Associated Press journalists had been granted unprecedented access to travel to travel to parts of North Korea no foreign journalists had been allowed to see before.</p>
+
+                    <div class="embed" data-title="paektu"></div>
+                </section>
+
+                <section class="project">
+                    <div class="header">
+                        <h2>
+                            <span>The goal of life</span>
+                            <!-- <span class="social">
+                                <a href="" target="_blank">t.</a>
+                                <a href="" target="_blank">f.</a>
+                            </span> -->
+                        </h2>
+                    </ul>
+
+                    <a href="http://hosted.ap.org/interactives/2014/honduras-soccer" target="_blank">
+                        <!-- <div class="background-image" data-src="images/paektu.jpg"></div> -->
+                        <img class="grayscale" src="images/placeholder.png" data-src="images/honduras.jpg" data-retina="" data-websrc="images/honduras-web.jpg" alt="image" />
+                    </a>
+                    <p class="description">Multimedia narrative explores the vital role of soccer for children growing up the in the gang-ruled slums of Honduras, where violence and death are commonplace.</p>
+
+                    <div class="embed" data-title="paektu"></div>
+                </section>
+
+                <section class="project">
+                    <div class="header">
+                        <h2>
+                            <span>Focus: North Korea</span>
+                            <!-- <span class="social">
+                                <a href="" target="_blank">t.</a>
+                                <a href="" target="_blank">f.</a>
+                            </span> -->
+                        </h2>
+                    </div>
+                    <a href="http://hosted.ap.org/interactives/2013/focus-north-korea" target="_blank">
+                        <!-- <div class="background-image" data-src="images/paektu.jpg"></div> -->
+                        <img class="grayscale" src="images/placeholder.png" data-src="images/focus-dprk.jpg" data-retina="" data-websrc="images/focus-dprk-web.jpg" alt="image" />
+                    </a>
+                    <p class="description">Associated Press journalists in Pyongyang used Instagram to highlight rarely seen views of the reclusive country. Part of a project that won of the 2013 ONA Award for topical reporting.</p>
+                </section>
+
+                <section class="project">
+                    <div class="header">
+                        <h2>
+                            <span>Old world portraits</span>
+                            <!-- <span class="social">
+                                <a href="" target="_blank">t.</a>
+                                <a href="" target="_blank">f.</a>
+                            </span> -->
+                        </h2>
+                    </div>
+                    <a href="http://hosted.ap.org/interactives/2013/old-world-portraits" target="_blank">
+                        <!-- <div class="background-image" data-src="images/paektu.jpg"></div> -->
+                        <img class="grayscale" src="images/placeholder.png" data-src="images/old-world.jpg" data-retina="" data-websrc="images/old-world-web.jpg" alt="image" />
+                    </a>
+                    <p class="description">A series of portraits, interviews and charts explore the fears and futures of an ageing global population.</p>
+                </section>
+
+                <section class="project">
+                    <div class="header">   
+                        <h2>
+                            <span>Olympic torch</span>
+                            <!-- <span class="social">
+                                <a href="" target="_blank">t.</a>
+                                <a href="" target="_blank">f.</a>
+                            </span> -->
+                        </h2>
+                    </div>
+                    <a href="http://hosted.ap.org/interactives/2014/oly-torch-medals" target="_blank">
+                        <!-- <div class="background-image" data-src="images/paektu.jpg"></div> -->
+                        <img class="grayscale" src="images/placeholder.png" data-src="images/medal.jpg" data-retina="" data-websrc="images/medal-web.jpg" alt="image" />
+                    </a>
+                    <p class="description">A model viewer for the 2014 Winter Olympic gold medal, torch and cauldron.</p>
+                </section>
+
+                <section class="project">
+                    <div class="header">
+                        <h2>
+                            <span>2012 election map</span>
+                           <!--  <span class="social">
+                                <a href="" target="_blank">t.</a>
+                                <a href="" target="_blank">f.</a>
+                            </span> -->
+                        </h2>
+                    </div>
+                    <a href="http://election2012.npr.org/results-map.html" target="_blank">
+                        <!-- <div class="background-image" data-src="images/paektu.jpg"></div> -->
+                        <img class="grayscale" src="images/placeholder.png" data-src="images/eln-2012.jpg" data-retina="" data-websrc="images/eln-2012-web.jpg" alt="image" />
+                    </a>
+                    <p class="description">Election map from the 2012 presidential election, as seen on NPR.</p>
+                </section>
+            </article>
+
+            <article id="about">
+            </article>
         </div>
 
-        <div class="main-container">
-            <div class="main wrapper clearfix">
 
-                <article>
-                    <header>
-                        <h1>article header h1</h1>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec.</p>
-                    </header>
-                    <section>
-                        <h2>article section h2</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec. Curabitur posuere enim eget turpis feugiat tempor. Etiam ullamcorper lorem dapibus velit suscipit ultrices. Proin in est sed erat facilisis pharetra.</p>
-                    </section>
-                    <section>
-                        <h2>article section h2</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec. Curabitur posuere enim eget turpis feugiat tempor. Etiam ullamcorper lorem dapibus velit suscipit ultrices. Proin in est sed erat facilisis pharetra.</p>
-                    </section>
-                    <footer>
-                        <h3>article footer h3</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec. Curabitur posuere enim eget turpis feugiat tempor.</p>
-                    </footer>
-                </article>
-
-                <aside>
-                    <h3>aside</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec. Curabitur posuere enim eget turpis feugiat tempor. Etiam ullamcorper lorem dapibus velit suscipit ultrices.</p>
-                </aside>
-
-            </div> <!-- #main -->
-        </div> <!-- #main-container -->
-
-        <div class="footer-container">
-            <footer class="wrapper">
-                <h3>footer</h3>
-            </footer>
-        </div>
-
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.1.min.js"><\/script>')</script>
-
-        <script src="js/main.js"></script>
+<!--         <footer class="wrapper">
+            <h3>footer</h3>
+        </footer>
+ -->
+        <!-- requirejs -->
+        <script data-main="js/main" src="js/vendor/require-2.1.15.min.js"></script>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
