updated images. dropped web images. removed code associated with adaptive images. copy edits.

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                         <!-- <div class="background-image" data-src="images/paektu.jpg"></div> -->
                         <img class="grayscale" src="images/placeholder.png" data-src="images/focus-dprk.jpg" data-retina="" data-websrc="images/focus-dprk-web.jpg" alt="image" />
                     </a>
-                    <p class="description">Associated Press journalists in Pyongyang used Instagram to highlight rarely seen views of the reclusive country. Part of a project that won of the 2013 ONA Award for topical reporting.</p>
+                    <p class="description">AP journalists in Pyongyang used Instagram to highlight rarely seen views of the reclusive country. Winner of the 2013 ONA Award for topical reporting.</p>
                 </section>
 
                 <section class="project">
@@ -155,7 +155,7 @@
                         <!-- <div class="background-image" data-src="images/paektu.jpg"></div> -->
                         <img class="grayscale" src="images/placeholder.png" data-src="images/medal.jpg" data-retina="" data-websrc="images/medal-web.jpg" alt="image" />
                     </a>
-                    <p class="description">A model viewer for the 2014 Winter Olympic gold medal, torch and cauldron.</p>
+                    <p class="description">A model viewer for the 2014 Winter Olympics gold medal, torch and cauldron.</p>
                 </section>
 
                 <section class="project">
