--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                         <!-- <div class="background-image" data-src="images/paektu.jpg"></div> -->
                         <img class="grayscale" src="images/placeholder.png" data-src="images/paektu.jpg" data-retina="" data-websrc="images/paektu-web.jpg" alt="image" />
                     </a>
-                    <p class="description">Associated Press journalists had been granted unprecedented access to travel to travel to parts of North Korea no foreign journalists had been allowed to see before.</p>
+                    <p class="description">Touch interface for a photo essay highlighting a road trip through parts of North Korea that no foreign journalists had been allowed to see before.</p>
 
                     <div class="embed" data-title="paektu"></div>
                 </section>
