removed cache busting from app.js copy edit for descriptions

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                         <!-- <div class="background-image" data-src="images/paektu.jpg"></div> -->
                         <img class="grayscale" src="images/placeholder.png" data-src="images/medal.jpg" data-retina="" data-websrc="images/medal-web.jpg" alt="image" />
                     </a>
-                    <p class="description">A model viewer for the 2014 Winter Olympics gold medal, torch and cauldron.</p>
+                    <p class="description">Model viewer for the 2014 Winter Olympics gold medal, torch and cauldron.</p>
                 </section>
 
                 <section class="project">
