--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                         <!-- <div class="background-image" data-src="images/paektu.jpg"></div> -->
                         <img class="grayscale" src="images/placeholder.png" data-src="images/paektu.jpg" data-retina="" data-websrc="images/paektu-web.jpg" alt="image" />
                     </a>
-                    <p class="description">Touch interface for a photo essay highlighting a road trip through parts of North Korea that no foreign journalists had been allowed to see before.</p>
+                    <p class="description">Photo essay from a road trip by AP journalists to Mount Pektu – who travelled parts of North Korea previously unseen by foreign journalists.</p>
 
                     <div class="embed" data-title="paektu"></div>
                 </section>
@@ -138,7 +138,7 @@
                         <!-- <div class="background-image" data-src="images/paektu.jpg"></div> -->
                         <img class="grayscale" src="images/placeholder.png" data-src="images/old-world.jpg" data-retina="" data-websrc="images/old-world-web.jpg" alt="image" />
                     </a>
-                    <p class="description">A series of portraits, interviews and charts explore the fears and futures of an ageing global population.</p>
+                    <p class="description">A series of portraits, interviews and accompanying charts explore the future and fears of an ageing global population.</p>
                 </section>
 
                 <section class="project">
