added two koreas & world cup goals. some copy edits

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                         <!-- <div class="background-image" data-src="images/paektu.jpg"></div> -->
                         <img class="grayscale" src="images/placeholder.png" data-src="images/paektu.jpg" data-retina="" data-websrc="images/paektu-web.jpg" alt="image" />
                     </a>
-                    <p class="description">Photo essay from a road trip by AP journalists to Mount Pektu – who travelled parts of North Korea previously unseen by foreign journalists.</p>
+                    <p class="description">Photo essay from a road trip across North Korea taken by AP journalists.</p>
 
                     <div class="embed" data-title="paektu"></div>
                 </section>
@@ -102,7 +102,7 @@
                         <!-- <div class="background-image" data-src="images/paektu.jpg"></div> -->
                         <img class="grayscale" src="images/placeholder.png" data-src="images/honduras.jpg" data-retina="" data-websrc="images/honduras-web.jpg" alt="image" />
                     </a>
-                    <p class="description">Multimedia narrative explores the vital role of soccer for children growing up the in the gang-ruled slums of Honduras, where violence and death are commonplace.</p>
+                    <p class="description">Multimedia narrative explores the role of soccer for children growing up the in the gang-ruled slums of Honduras.</p>
 
                     <div class="embed" data-title="paektu"></div>
                 </section>
@@ -127,6 +127,23 @@
                 <section class="project">
                     <div class="header">
                         <h2>
+                            <span>Two Koreas</span>
+                           <!--  <span class="social">
+                                <a href="" target="_blank">t.</a>
+                                <a href="" target="_blank">f.</a>
+                            </span> -->
+                        </h2>
+                    </div>
+                    <a href="http://hosted.ap.org/interactives/2013/north-korea/?PANELS=two-koreas" target="_blank">
+                        <!-- <div class="background-image" data-src="images/paektu.jpg"></div> -->
+                        <img class="grayscale" src="images/placeholder.png" data-src="images/two-koreas-2.jpg" data-retina="" data-websrc="images/two-koreas-2-web.jpg" alt="image" />
+                    </a>
+                    <p class="description">Comparing North and South Korean development in the 50 years following the end of the Korean War.</p>
+                </section>
+
+                <section class="project">
+                    <div class="header">
+                        <h2>
                             <span>Old world portraits</span>
                             <!-- <span class="social">
                                 <a href="" target="_blank">t.</a>
@@ -138,7 +155,27 @@
                         <!-- <div class="background-image" data-src="images/paektu.jpg"></div> -->
                         <img class="grayscale" src="images/placeholder.png" data-src="images/old-world.jpg" data-retina="" data-websrc="images/old-world-web.jpg" alt="image" />
                     </a>
-                    <p class="description">A series of portraits, interviews and accompanying charts explore the future and fears of an ageing global population.</p>
+                    <p class="description">A series of portraits, interviews and charts explore the future and fears of an ageing global population.</p>
+                </section>
+
+                <section class="project">
+                    <div class="header">
+                        <h2>
+                            <span>Every World Cup goal</span>
+                            <!-- <span class="social">
+                                <a href="" target="_blank">t.</a>
+                                <a href="" target="_blank">f.</a>
+                            </span> -->
+                        </h2>
+                    </ul>
+
+                    <a href="http://hosted.ap.org/interactives/2014/world-cup-scoring" target="_blank">
+                        <!-- <div class="background-image" data-src="images/paektu.jpg"></div> -->
+                        <img class="grayscale" src="images/placeholder.png" data-src="images/wc-goals.jpg" data-retina="" data-websrc="images/wc-goals.jpg" alt="image" />
+                    </a>
+                    <p class="description">Data visualization shows every shot and goal from the 2014 World Cup.</p>
+
+                    <div class="embed" data-title="paektu"></div>
                 </section>
 
                 <section class="project">
@@ -172,7 +209,7 @@
                         <!-- <div class="background-image" data-src="images/paektu.jpg"></div> -->
                         <img class="grayscale" src="images/placeholder.png" data-src="images/eln-2012.jpg" data-retina="" data-websrc="images/eln-2012-web.jpg" alt="image" />
                     </a>
-                    <p class="description">Election map from the 2012 presidential election, as seen on NPR.</p>
+                    <p class="description">2012 Presidential Election map, as seen on NPR.</p>
                 </section>
             </article>
 
