--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                         <!-- <div class="background-image" data-src="images/paektu.jpg"></div> -->
                         <img class="grayscale" src="images/placeholder.png" data-src="images/two-koreas-2.jpg" data-retina="" data-websrc="images/two-koreas-2-web.jpg" alt="image" />
                     </a>
-                    <p class="description">Comparing North and South Korean development in the 50 years following the end of the Korean War.</p>
+                    <p class="description">Comparing the development of North and South Korea in the decades following the Korean War.</p>
                 </section>
 
                 <section class="project">
