added latest weegee project. moved urls to use interactive.ap.org

--- a/index.html
+++ b/index.html
@@ -71,6 +71,25 @@
                 <section class="project">
                     <div class="header">
                         <h2>
+                            <span>Weegee’s New York</span>
+                            <!-- <span class="social">
+                                    <a href="" target="_blank">t.</a>
+                                    <a href="" target="_blank">f.</a>
+                            </span> -->
+                        </h2>
+                    </div>
+                    <a href="http://interactives.ap.org/2015/weegees-new-york" target="_blank">
+                        <!-- <div class="background-image" data-src="images/paektu.jpg"></div> -->
+                        <img class="grayscale" src="images/placeholder.png" data-src="images/weegee.jpg" data-retina="" data-websrc="images/weegee-web.jpg" alt="image" />
+                    </a>
+                    <p class="description">A series of before and after images show the industrialized, pre-gentrified New York of lengendary New York crime photograher Weegee.</p>
+
+                    <div class="embed" data-title="weegee"></div>
+                </section>
+
+                <section class="project">
+                    <div class="header">
+                        <h2>
                             <span>Road to Paektu</span>
                             <!-- <span class="social">
                                     <a href="" target="_blank">t.</a>
@@ -78,11 +97,11 @@
                             </span> -->
                         </h2>
                     </div>
-                    <a href="http://hosted.ap.org/interactives/2014/road-to-paektu" target="_blank">
+                    <a href="http://interactives.ap.org/2014/road-to-paektu" target="_blank">
                         <!-- <div class="background-image" data-src="images/paektu.jpg"></div> -->
                         <img class="grayscale" src="images/placeholder.png" data-src="images/paektu.jpg" data-retina="" data-websrc="images/paektu-web.jpg" alt="image" />
                     </a>
-                    <p class="description">Photo essay from a road trip across North Korea taken by AP journalists.</p>
+                    <p class="description">Photo essay from a road trip across North Korea taken by AP journalists. 2014 SND Award of Excellence for single-subject features.</p>
 
                     <div class="embed" data-title="paektu"></div>
                 </section>
@@ -98,11 +117,11 @@
                         </h2>
                     </ul>
 
-                    <a href="http://hosted.ap.org/interactives/2014/honduras-soccer" target="_blank">
+                    <a href="http://interactives.ap.org/2014/honduras-soccer" target="_blank">
                         <!-- <div class="background-image" data-src="images/paektu.jpg"></div> -->
                         <img class="grayscale" src="images/placeholder.png" data-src="images/honduras.jpg" data-retina="" data-websrc="images/honduras-web.jpg" alt="image" />
                     </a>
-                    <p class="description">Multimedia narrative explores the role of soccer for children growing up the in the gang-ruled slums of Honduras.</p>
+                    <p class="description">Multimedia narrative explores the role of soccer for children growing up the in the gang-ruled slums of Honduras. 2014 SND Award of Excellence for use of multimedia.</p>
 
                     <div class="embed" data-title="paektu"></div>
                 </section>
@@ -117,11 +136,11 @@
                             </span> -->
                         </h2>
                     </div>
-                    <a href="http://hosted.ap.org/interactives/2013/focus-north-korea" target="_blank">
+                    <a href="hhttp://interactives.ap.org/2013/focus-north-korea" target="_blank">
                         <!-- <div class="background-image" data-src="images/paektu.jpg"></div> -->
                         <img class="grayscale" src="images/placeholder.png" data-src="images/focus-dprk.jpg" data-retina="" data-websrc="images/focus-dprk-web.jpg" alt="image" />
                     </a>
-                    <p class="description">AP journalists in Pyongyang used Instagram to highlight rarely seen views of the reclusive country. Winner of the 2013 ONA Award for topical reporting.</p>
+                    <p class="description">AP journalists in Pyongyang used Instagram to highlight rarely seen views of the reclusive country. Winner of the 2013 ONA award for topical reporting.</p>
                 </section>
 
                 <section class="project">
@@ -134,7 +153,7 @@
                             </span> -->
                         </h2>
                     </div>
-                    <a href="http://hosted.ap.org/interactives/2013/north-korea/?PANELS=two-koreas" target="_blank">
+                    <a href="http://interactives.ap.org/2013/north-korea/?PANELS=two-koreas" target="_blank">
                         <!-- <div class="background-image" data-src="images/paektu.jpg"></div> -->
                         <img class="grayscale" src="images/placeholder.png" data-src="images/two-koreas-2.jpg" data-retina="" data-websrc="images/two-koreas-2-web.jpg" alt="image" />
                     </a>
@@ -151,7 +170,7 @@
                             </span> -->
                         </h2>
                     </div>
-                    <a href="http://hosted.ap.org/interactives/2013/old-world-portraits" target="_blank">
+                    <a href="http://interactives.ap.org/2013/old-world-portraits" target="_blank">
                         <!-- <div class="background-image" data-src="images/paektu.jpg"></div> -->
                         <img class="grayscale" src="images/placeholder.png" data-src="images/old-world.jpg" data-retina="" data-websrc="images/old-world-web.jpg" alt="image" />
                     </a>
@@ -169,7 +188,7 @@
                         </h2>
                     </ul>
 
-                    <a href="http://hosted.ap.org/interactives/2014/world-cup-scoring" target="_blank">
+                    <a href="http://interactives.ap.org/2014/world-cup-scoring" target="_blank">
                         <!-- <div class="background-image" data-src="images/paektu.jpg"></div> -->
                         <img class="grayscale" src="images/placeholder.png" data-src="images/wc-goals.jpg" data-retina="" data-websrc="images/wc-goals.jpg" alt="image" />
                     </a>
@@ -188,7 +207,7 @@
                             </span> -->
                         </h2>
                     </div>
-                    <a href="http://hosted.ap.org/interactives/2014/oly-torch-medals" target="_blank">
+                    <a href="http://interactives.ap.org/2014/oly-torch-medals" target="_blank">
                         <!-- <div class="background-image" data-src="images/paektu.jpg"></div> -->
                         <img class="grayscale" src="images/placeholder.png" data-src="images/medal.jpg" data-retina="" data-websrc="images/medal-web.jpg" alt="image" />
                     </a>
