corrected typo in URL

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                             </span> -->
                         </h2>
                     </div>
-                    <a href="hhttp://interactives.ap.org/2013/focus-north-korea" target="_blank">
+                    <a href="http://interactives.ap.org/2013/focus-north-korea" target="_blank">
                         <!-- <div class="background-image" data-src="images/paektu.jpg"></div> -->
                         <img class="grayscale" src="images/placeholder.png" data-src="images/focus-dprk.jpg" data-retina="" data-websrc="images/focus-dprk-web.jpg" alt="image" />
                     </a>
