--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                         <!-- <div class="background-image" data-src="images/paektu.jpg"></div> -->
                         <img class="grayscale" src="images/placeholder.png" data-src="images/weegee.jpg" data-retina="" data-websrc="images/weegee-web.jpg" alt="image" />
                     </a>
-                    <p class="description">A series of before and after images show the industrialized, pre-gentrified New York of legendary New York crime photograher Weegee.</p>
+                    <p class="description">A series of before and after images show the industrialized, pre-gentrified New York of legendary New York crime photographer Weegee.</p>
 
                     <div class="embed" data-title="weegee"></div>
                 </section>
