refined size/line-height of description. copy edits to honduras desc. text

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                         <!-- <div class="background-image" data-src="images/paektu.jpg"></div> -->
                         <img class="grayscale" src="images/placeholder.png" data-src="images/honduras.jpg" data-retina="" data-websrc="images/honduras-web.jpg" alt="image" />
                     </a>
-                    <p class="description">Multimedia narrative explores the role of soccer for children growing up the in the gang-ruled slums of Honduras. 2014 SND Award of Excellence for use of multimedia.</p>
+                    <p class="description">Multimedia narrative explores the role of soccer for children growing up the in the slums of Honduras. 2014 SND Award of Excellence for use of multimedia.</p>
 
                     <div class="embed" data-title="paektu"></div>
                 </section>
