added new projects: trading pit signals & slave fishermen

--- a/index.html
+++ b/index.html
@@ -68,7 +68,45 @@
             </header>
 
             <article id="projects">
-                <section class="project">
+                 <section class="project" data-category="multimedia--photo-essay--video">
+                    <div class="header">
+                        <h2>
+                            <span>Trading signals</span>
+                            <!-- <span class="social">
+                                    <a href="" target="_blank">t.</a>
+                                    <a href="" target="_blank">f.</a>
+                            </span> -->
+                        </h2>
+                    </div>
+                    <a href="http://interactives.ap.org/2015/trading-pits-signals" target="_blank">
+                        <!-- <div class="background-image" data-src="images/paektu.jpg"></div> -->
+                        <img class="grayscale" src="images/placeholder.png" data-src="images/trading-signals.jpg" data-retina="" data-websrc="images/trading-signals.jpg" alt="image" />
+                    </a>
+                    <p class="description">An introduction to the elaborate language of hand signals used by commodities traders ahead of the closure of most NY and Chicago futures pits.</p>
+
+                    <div class="embed" data-title="trading-signals"></div>
+                </section>
+
+                <section class="project" data-category="multimedia--photo-essay">
+                    <div class="header">
+                        <h2>
+                            <span>Modern slavery</span>
+                            <!-- <span class="social">
+                                    <a href="" target="_blank">t.</a>
+                                    <a href="" target="_blank">f.</a>
+                            </span> -->
+                        </h2>
+                    </div>
+                    <a href="http://interactives.ap.org/2015/trading-pits-signals" target="_blank">
+                        <!-- <div class="background-image" data-src="images/paektu.jpg"></div> -->
+                        <img class="grayscale" src="images/placeholder.png" data-src="images/slave-fishermen.jpg" data-retina="" data-websrc="images/slave-fishermen.jpg" alt="image" />
+                    </a>
+                    <p class="description">The personal stories of men freed from conditions of modern day slavery following an Associated Press investigation into the Thai fishing industry that led to the rescue of hundreds of men.</p>
+
+                    <div class="embed" data-title="modern-slavery"></div>
+                </section>
+
+                <section class="project" data-category="multimedia--photo-essay">
                     <div class="header">
                         <h2>
                             <span>Weegee’s New York</span>
@@ -87,7 +125,7 @@
                     <div class="embed" data-title="weegee"></div>
                 </section>
 
-                <section class="project">
+                <section class="project" data-category="multimedia--photo-essay">
                     <div class="header">
                         <h2>
                             <span>Road to Paektu</span>
@@ -106,7 +144,7 @@
                     <div class="embed" data-title="paektu"></div>
                 </section>
 
-                <section class="project">
+                <section class="project" data-category="multimedia">
                     <div class="header">
                         <h2>
                             <span>The goal of life</span>
@@ -126,7 +164,7 @@
                     <div class="embed" data-title="paektu"></div>
                 </section>
 
-                <section class="project">
+                <section class="project" data-category="multimedia--photo-essay">
                     <div class="header">
                         <h2>
                             <span>Focus: North Korea</span>
@@ -143,7 +181,7 @@
                     <p class="description">AP journalists in Pyongyang used Instagram to highlight rarely seen views of the reclusive country. Winner of the 2013 ONA award for topical reporting.</p>
                 </section>
 
-                <section class="project">
+                <section class="project" data-category="multimedia--dataviz">
                     <div class="header">
                         <h2>
                             <span>Two Koreas</span>
@@ -160,7 +198,7 @@
                     <p class="description">Comparing the development of North and South Korea in the decades following the Korean War.</p>
                 </section>
 
-                <section class="project">
+                <section class="project" data-category="multimedia--photo-essay--dataviz">
                     <div class="header">
                         <h2>
                             <span>Old world portraits</span>
@@ -177,7 +215,7 @@
                     <p class="description">A series of portraits, interviews and charts explore the future and fears of an ageing global population.</p>
                 </section>
 
-                <section class="project">
+                <section class="project" data-category="dataviz">
                     <div class="header">
                         <h2>
                             <span>Every World Cup goal</span>
@@ -197,7 +235,7 @@
                     <div class="embed" data-title="paektu"></div>
                 </section>
 
-                <section class="project">
+                <section class="project" data-category="3d">
                     <div class="header">   
                         <h2>
                             <span>Olympic torch</span>
@@ -214,7 +252,7 @@
                     <p class="description">Model viewer for the 2014 Winter Olympics gold medal, torch and cauldron.</p>
                 </section>
 
-                <section class="project">
+                <section class="project" data-category="dataviz">
                     <div class="header">
                         <h2>
                             <span>2012 election map</span>
