--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                         <!-- <div class="background-image" data-src="images/paektu.jpg"></div> -->
                         <img class="grayscale" src="images/placeholder.png" data-src="images/slave-fishermen.jpg" data-retina="" data-websrc="images/slave-fishermen.jpg" alt="image" />
                     </a>
-                    <p class="description">The personal stories of men freed from conditions of modern day slavery following an Associated Press investigation into the Thai fishing industry that led to the rescue of hundreds of men.</p>
+                    <p class="description">Stories of men freed from conditions of modern day slavery following an investigation by the AP into the Thai fishing industry.</p>
 
                     <div class="embed" data-title="modern-slavery"></div>
                 </section>
