added trandgender youth project

--- a/index.html
+++ b/index.html
@@ -68,6 +68,24 @@
             </header>
 
             <article id="projects">
+                <section class="project" data-category="multimedia--photo-essay--audio">
+                    <div class="header">
+                        <h2>
+                            <span>Transgender youth</span>
+                            <!-- <span class="social">
+                                    <a href="" target="_blank">t.</a>
+                                    <a href="" target="_blank">f.</a>
+                            </span> -->
+                        </h2>
+                    </div>
+                    <a href="http://interactives.ap.org/2015/transgender-youth" target="_blank">
+                        <img class="grayscale" src="images/placeholder.png" data-src="images/transgender-youth.jpg" data-retina="" data-websrc="images/transgender-youth.jpg" alt="image" />
+                    </a>
+                    <p class="description">Portraits of transgender youth in South Florida highlight their hardship and resilience.</p>
+
+                    <div class="embed" data-title="trading-signals"></div>
+                </section>
+
                  <section class="project" data-category="multimedia--photo-essay--video">
                     <div class="header">
                         <h2>
