--- a/index.html
+++ b/index.html
@@ -68,6 +68,66 @@
             </header>
 
             <article id="projects">
+            <section class="project" data-category="multimedia--vr">
+                    <div class="header">
+                        <h2>
+                            <span>The Second Line</span>
+                            <!-- <span class="social">
+                                    <a href="" target="_blank">t.</a>
+                                    <a href="" target="_blank">f.</a>
+                            </span> -->
+                        </h2>
+                    </div>
+                    <div id="youtube-embed-container">
+                        <iframe src="https://www.youtube.com/embed/YKPDIUH9-Y8?rel=0&amp;controls=0&amp;showinfo=0&amp;rel=0" frameborder="0" allowfullscreen></iframe>
+                    </div>
+                    <!-- <a href="http://interactives.ap.org/2016/nola-seond-line" target="_blank">
+                        <img class="grayscale" src="images/placeholder.png" data-src="images/transgender-youth.jpg" data-retina="" data-websrc="images/transgender-youth.jpg" alt="image" />
+                    </a> -->
+                    <p class="description">360° video tk tk tk. Produced in collaboration with RYOT News.</p>
+
+                    <div class="embed" data-title="second-line"></div>
+                </section>
+
+                <section class="project" data-category="multimedia--vr">
+                    <div class="header">
+                        <h2>
+                            <span>Seeking Home</span>
+                            <!-- <span class="social">
+                                    <a href="" target="_blank">t.</a>
+                                    <a href="" target="_blank">f.</a>
+                            </span> -->
+                        </h2>
+                    </div>
+                    <!-- <div id="youtube-embed-container">
+                        <iframe src="https://www.youtube.com/embed/YKPDIUH9-Y8?rel=0&amp;controls=0&amp;showinfo=0&amp;rel=0" frameborder="0" allowfullscreen></iframe>
+                    </div> -->
+                    <a href="http://interactives.ap.org/2015/calais-migrant-camp" target="_blank">
+                        <img class="grayscale" src="images/placeholder.png" data-src="images/calais.jpg" data-retina="" data-websrc="images/calais.jpg" alt="image" />
+                    </a>
+                    <p class="description">360° video documents a camp in northern France where migrants and refugees wait, hoping to make it to the U.K. Produced in collaboration with RYOT News.</p>
+
+                    <div class="embed" data-title="calais-migrant-camps"></div>
+                </section>
+
+                <section class="project" data-category="dataviz">
+                    <div class="header">
+                        <h2>
+                            <span>Shrimp supply chain</span>
+                            <!-- <span class="social">
+                                    <a href="" target="_blank">t.</a>
+                                    <a href="" target="_blank">f.</a>
+                            </span> -->
+                        </h2>
+                    </div>
+                    <a href="http://interactives.ap.org/2015/shrimp-supply-chain" target="_blank">
+                        <img class="grayscale" src="images/placeholder.png" data-src="images/shrimp-sheds.jpg" data-retina="" data-websrc="images/shrimp-sheds.jpg" alt="image" />
+                    </a>
+                    <p class="description">Flowchart tracks how shrimp peeled using forced labour reaches the supply chain of American consumers.</p>
+
+                    <div class="embed" data-title="shrimp-supply-chain"></div>
+                </section>
+
                 <section class="project" data-category="multimedia--photo-essay--audio">
                     <div class="header">
                         <h2>
@@ -83,7 +143,7 @@
                     </a>
                     <p class="description">Portraits of transgender youth in South Florida highlight their hardship and resilience.</p>
 
-                    <div class="embed" data-title="trading-signals"></div>
+                    <div class="embed" data-title="transgender-youth"></div>
                 </section>
 
                  <section class="project" data-category="multimedia--photo-essay--video">
