--- a/index.html
+++ b/index.html
@@ -78,13 +78,13 @@
                             </span> -->
                         </h2>
                     </div>
-                    <div id="youtube-embed-container">
-                        <iframe src="https://www.youtube.com/embed/YKPDIUH9-Y8?rel=0&amp;controls=0&amp;showinfo=0&amp;rel=0" frameborder="0" allowfullscreen></iframe>
+                    <div class="youtube-embed-container background-image">
+                        <iframe src="https://www.youtube.com/embed/GFocVo3zzE4?rel=0&amp;controls=0&amp;showinfo=0&amp;rel=0" frameborder="0" allowfullscreen></iframe>
                     </div>
                     <!-- <a href="http://interactives.ap.org/2016/nola-seond-line" target="_blank">
                         <img class="grayscale" src="images/placeholder.png" data-src="images/transgender-youth.jpg" data-retina="" data-websrc="images/transgender-youth.jpg" alt="image" />
                     </a> -->
-                    <p class="description">360° video tk tk tk. Produced in collaboration with RYOT News.</p>
+                    <p class="description">360 video documents a second line parade organized in response to the gun violence that plagues New Orleans. Produced in collaboration with RYOT News.</p>
 
                     <div class="embed" data-title="second-line"></div>
                 </section>
@@ -99,13 +99,13 @@
                             </span> -->
                         </h2>
                     </div>
-                    <!-- <div id="youtube-embed-container">
+                    <div class="youtube-embed-container background-image">
                         <iframe src="https://www.youtube.com/embed/YKPDIUH9-Y8?rel=0&amp;controls=0&amp;showinfo=0&amp;rel=0" frameborder="0" allowfullscreen></iframe>
-                    </div> -->
-                    <a href="http://interactives.ap.org/2015/calais-migrant-camp" target="_blank">
+                    </div>
+                    <!-- <a href="http://interactives.ap.org/2015/calais-migrant-camp" target="_blank">
                         <img class="grayscale" src="images/placeholder.png" data-src="images/calais.jpg" data-retina="" data-websrc="images/calais.jpg" alt="image" />
-                    </a>
-                    <p class="description">360° video documents a camp in northern France where migrants and refugees wait, hoping to make it to the U.K. Produced in collaboration with RYOT News.</p>
+                    </a> -->
+                    <p class="description">360 video documents a camp in northern France where migrants and refugees wait, hoping to make it to the U.K. Produced in collaboration with RYOT News.</p>
 
                     <div class="embed" data-title="calais-migrant-camps"></div>
                 </section>
