added controls to youtube player

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                         </h2>
                     </div>
                     <div class="youtube-embed-container background-image">
-                        <iframe src="https://www.youtube.com/embed/GFocVo3zzE4?rel=0&amp;controls=0&amp;showinfo=0&amp;rel=0" frameborder="0" allowfullscreen></iframe>
+                        <iframe src="https://www.youtube.com/embed/GFocVo3zzE4?rel=0&amp;showinfo=0&amp;rel=0" frameborder="0" allowfullscreen></iframe>
                     </div>
                     <!-- <a href="http://interactives.ap.org/2016/nola-seond-line" target="_blank">
                         <img class="grayscale" src="images/placeholder.png" data-src="images/transgender-youth.jpg" data-retina="" data-websrc="images/transgender-youth.jpg" alt="image" />
@@ -100,7 +100,7 @@
                         </h2>
                     </div>
                     <div class="youtube-embed-container background-image">
-                        <iframe src="https://www.youtube.com/embed/YKPDIUH9-Y8?rel=0&amp;controls=0&amp;showinfo=0&amp;rel=0" frameborder="0" allowfullscreen></iframe>
+                        <iframe src="https://www.youtube.com/embed/YKPDIUH9-Y8?rel=0&amp;showinfo=0&amp;rel=0" frameborder="0" allowfullscreen></iframe>
                     </div>
                     <!-- <a href="http://interactives.ap.org/2015/calais-migrant-camp" target="_blank">
                         <img class="grayscale" src="images/placeholder.png" data-src="images/calais.jpg" data-retina="" data-websrc="images/calais.jpg" alt="image" />
