Added two new projects to portfolio

--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
                                     <i class="fa fa-lg fa-twitter"></i>
                                 </a>
                             </li>
-                            <li>
+                            <!-- <li>
                                 <a href="http://competitionreport.tumblr.com" title="competitionreport.tumblr.com" target="_blank" data-article="tumblr">
                                     <i class="fa fa-lg fa-tumblr"></i>
                                 </a>
-                            </li>
+                            </li> -->
                         </ul>
                     </nav>
                 </h3>
@@ -68,7 +68,44 @@
             </header>
 
             <article id="projects">
-            <section class="project" data-category="multimedia--vr">
+                <section class="project" data-category="dataviz--multimedia">
+                    <div class="header">
+                        <h2>
+                            <span>Honor Killings</span>
+                            <!-- <span class="social">
+                                    <a href="" target="_blank">t.</a>
+                                    <a href="" target="_blank">f.</a>
+                            </span> -->
+                        </h2>
+                    </div>
+                    <a href="http://interactives.ap.org/2016/honor-killings" target="_blank">
+                        <img class="grayscale" src="images/placeholder.png" data-src="images/honor-killings.jpg" data-retina="" data-websrc="images/honor-killings.jpg" alt="image" />
+                    </a>
+                    <p class="description">Visualization of a database compiled by The AP of hundreds of cases of women killed in so-called honor killings in Pakistan.</p>
+
+                    <div class="embed" data-title="shrimp-supply-chain"></div>
+                </section>
+
+                <section class="project" data-category="multimedia--vr">
+                    <div class="header">
+                        <h2>
+                            <span>Summer Symphony</span>
+                            <!-- <span class="social">
+                                    <a href="" target="_blank">t.</a>
+                                    <a href="" target="_blank">f.</a>
+                            </span> -->
+                        </h2>
+                    </div>
+                    <div class="youtube-embed-container background-image">
+                        <iframe src="https://www.youtube.com/embed/JI26qm95tas?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+                    </div>
+
+                    <p class="description">Join Alan Gilbert, Music Director of the NY Philharmonic, on stage and surrounded by by the orchestra in this 360 video experience.</p>
+
+                    <div class="embed" data-title="second-line"></div>
+                </section>
+
+                <section class="project" data-category="multimedia--vr">
                     <div class="header">
                         <h2>
                             <span>The Second Line</span>
