added nimrud's riches

--- a/index.html
+++ b/index.html
@@ -67,7 +67,26 @@
                 </nav> -->
             </header>
 
+    
             <article id="projects">
+                <section class="project" data-category="multimedia--vr">
+                    <div class="header">
+                        <h2>
+                            <span>Nimrud’s Riches</span>
+                            <!-- <span class="social">
+                                    <a href="" target="_blank">t.</a>
+                                    <a href="" target="_blank">f.</a>
+                            </span> -->
+                        </h2>
+                    </div>
+                    <a href="http://hosted.ap.org/interactives/2016/nimrud-destroyed/" target="_blank">
+                        <img class="grayscale" src="images/placeholder.png" data-src="images/nimrud-riches.jpg" data-retina="" data-websrc="images/nimrud-riches.jpg" alt="image" />
+                    </a>
+                    <p class="description">Virtual reality exploration of the Islamic State’s destruction of the archaeological site of Nimrud in Iraq.</p>
+
+                    <div class="embed" data-title="nimrud-riches"></div>
+                </section>
+
                 <section class="project" data-category="dataviz--multimedia">
                     <div class="header">
                         <h2>
@@ -83,7 +102,7 @@
                     </a>
                     <p class="description">Visualization of a database compiled by The AP of hundreds of cases of women killed in so-called honor killings in Pakistan.</p>
 
-                    <div class="embed" data-title="shrimp-supply-chain"></div>
+                    <div class="embed" data-title="honor-killings"></div>
                 </section>
 
                 <section class="project" data-category="multimedia--vr">
