added ground zero reborn

--- a/index.html
+++ b/index.html
@@ -87,6 +87,25 @@
                     <div class="embed" data-title="nimrud-riches"></div>
                 </section>
 
+                <section class="project" data-category="multimedia--vr">
+                    <div class="header">
+                        <h2>
+                            <span>Ground Zero Reborn</span>
+                            <!-- <span class="social">
+                                    <a href="" target="_blank">t.</a>
+                                    <a href="" target="_blank">f.</a>
+                            </span> -->
+                        </h2>
+                    </div>
+                    <div class="youtube-embed-container background-image">
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/Jceyr5cfPYM?showinfo=0?ecver=1" frameborder="0" allowfullscreen></iframe>
+                    </div>
+
+                    <p class="description">360 video takes viewers to the site of the fallen World Trade Center 15 years after 9/11.</p>
+
+                    <div class="embed" data-title="second-line"></div>
+                </section>
+
                 <section class="project" data-category="dataviz--multimedia">
                     <div class="header">
                         <h2>
