added ground zero reborn

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                         </h2>
                     </div>
                     <div class="youtube-embed-container background-image">
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/Jceyr5cfPYM?showinfo=0?ecver=1" frameborder="0" allowfullscreen></iframe>
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/Jceyr5cfPYM?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
                     </div>
 
                     <p class="description">360 video takes viewers to the site of the fallen World Trade Center 15 years after 9/11.</p>
