updated job title.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <header class="clearfix">
                 <h1 class="title">Nathan Griffiths</h1>
                 <h3 class="subhead">
-                    <span>Interactive Editor at The Associated Press. NYC.</span>
+                    <span>VR Producer with The New York Times. NYC.</span>
                     <nav class="contact-nav">
                         <span class="contact">
                             <span>Contact</span>
