updated job title. removed hover for contact info.

--- a/index.html
+++ b/index.html
@@ -26,11 +26,10 @@
                 <h3 class="subhead">
                     <span>VR Producer with The New York Times. NYC.</span>
                     <nav class="contact-nav">
-                        <span class="contact">
+                        <!-- <span class="contact">
                             <span>Contact</span>
                             <span class="down-arrow arrow">&#9660;</span>
-                            <!-- <span class="up-arrow arrow">&#9650;</span> -->
-                        </span>
+                        </span> -->
                         <ul>
                             <li>
                                 <a href="mailto:njgriffiths@gmail.com" title="email: njgriffiths@gmail.com" data-article="email">
