--- a/index.html
+++ b/index.html
@@ -66,6 +66,24 @@
                 <section class="project" data-category="multimedia--vr">
                     <div class="header">
                         <h2>
+                            <span>Daily 360</span>
+                            <!-- <span class="social">
+                                    <a href="" target="_blank">t.</a>
+                                    <a href="" target="_blank">f.</a>
+                            </span> -->
+                        </h2>
+                    </div>
+                    <a href="https://nytimes.com/video/nathan-griffiths" target="_blank">
+                        <img class="grayscale" src="images/placeholder.png" data-src="images/daily-360.png" data-retina="" data-websrc="images/nimrud-riches.jpg" alt="image" />
+                    </a>
+                    <p class="description">360° Videos produced for “The Daily 360” virtual reality video series at The New York Times.</p>
+
+                    <div class="embed" data-title="nimrud-riches"></div>
+                </section>
+
+                <section class="project" data-category="multimedia--vr">
+                    <div class="header">
+                        <h2>
                             <span>Nimrud’s Riches</span>
                             <!-- <span class="social">
                                     <a href="" target="_blank">t.</a>
@@ -76,7 +94,7 @@
                     <a href="http://hosted.ap.org/interactives/2016/nimrud-destroyed/" target="_blank">
                         <img class="grayscale" src="images/placeholder.png" data-src="images/nimrud-riches.jpg" data-retina="" data-websrc="images/nimrud-riches.jpg" alt="image" />
                     </a>
-                    <p class="description">Virtual reality exploration of the Islamic State’s destruction of the archaeological site of Nimrud in Iraq.</p>
+                    <p class="description">WebVR-based exploration of the Islamic State’s destruction of the archaeological site of Nimrud in Iraq.</p>
 
                     <div class="embed" data-title="nimrud-riches"></div>
                 </section>
