--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <header class="clearfix">
                 <h1 class="title">Nathan Griffiths</h1>
                 <h3 class="subhead">
-                    <span>VR Producer with The New York Times. NYC.</span>
+                    <span>Virtual reality/interactive design, development and production. NYC.</span>
                     <nav class="contact-nav">
                         <ul>
                             <li>
